Add robots.txt, sitemap.xml, canonical URL for SEO/Google indexing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title data-i18n="app.title">Expense Tracker</title>
     <meta name="description" content="Track expenses and income with categories, budgets, charts, and CSV export. Free, offline-capable, no sign-up needed." />
+    <link rel="canonical" href="https://et-lazerai.vercel.app/" />
     
     <!-- Open Graph -->
     <meta property="og:title" content="Expense Tracker" />
